[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "print-ext"
description = ''
readme = "README.rst"
requires-python = ">=3.7"
license = "MIT"
keywords = []
authors = [
  { name = "Aaron", email = "aaron@framelunch.jp" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = ['wcwidth']
dynamic = ["version"]

[project.urls]
Documentation = "https://github.com/aaron-fl/print_ext#readme"
Issues = "https://github.com/aaron-fl/print_ext/issues"
Source = "https://github.com/aaron-fl/print_ext"

[tool.hatch.version]
path = "src/print_ext/__about__.py"

[tool.hatch.envs.default]
dependencies = [
  "pytest",
  "pytest-cov",
  "pytest-asyncio",
]
[tool.hatch.envs.default.scripts]
cov = "pytest --cov-report=term-missing --cov-config=pyproject.toml --cov=src/print_ext --cov=tests"
no-cov = "cov --no-cov"
test = "pytest"

[[tool.hatch.envs.test.matrix]]
python = ["37", "38", "39", "310", "311"]

[tool.coverage.run]
branch = true
parallel = true
omit = [
  "src/print_ext/__about__.py",
]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[tool.hatch.build.targets.sdist]
exclude = [
  "/.github",
  "/docs",
]

[tool.hatch.build.targets.wheel]
packages = ["src/print_ext"]
